[package]
name = "agy-auth"
version = "0.1.0"
edition = "2021"
authors = ["hulei"]
description = "Standalone AGY CLI Multi-Account Management Tool"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
tabled = "0.15"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
anyhow = "1.0"

